Activate UI tests

--- a/RWDevConApp-2016/RWDevCon.xcworkspace/xcshareddata/xcschemes/RWDevCon - Development.xcscheme
+++ b/RWDevConApp-2016/RWDevCon.xcworkspace/xcshareddata/xcschemes/RWDevCon - Development.xcscheme
@@ -39,7 +39,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1A40DE9F1E7649CF00AD791A"
